# backup_pc

./: README.md
arm_ws/: dual_ur5e.urdf
arm_ws/install/: local_setup.sh  setup.sh
arm_ws/log/: latest_build
arm_ws/src/arm_description/: CMakeLists.txt  package.xml
arm_ws/src/arm_gazebo/: CMakeLists.txt
arm_ws/src/arm_gazebo/launch/: arm_gz.launch.py  empty_world.launch.py
arm_ws/src/arm_moveit_config/: .setup_assistant
arm_ws/src/dual_arm_description/: CMakeLists.txt
arm_ws/src/dual_arm_gazebo/: CMakeLists.txt
arm_ws/src/dual_ur5e_moveit_config/: package.xml
arm_ws/src/dual_ur5e_moveit_config/config/: joint_limits.yaml  kinematics.yaml  ur5e.srdf
arm_ws/src/dual_ur5e_moveit_config/launch/: demo.launch.py
arm_ws/src/my_mtc_task/: CMakeLists.txt
arm_ws/src/my_mtc_task/launch/: painting_mtc.launch.py  pick_and_place_mtc.launch.py
arm_ws/src/my_mtc_task/src/: auto_painter.cpp  hard_code.cpp  pick_and_place.cpp  simple_mtc.cpp
arm_ws/src/wall_painter/: CMakeLists.txt
arm_ws/src/wall_painter/scripts/: generate_waypoints.py  object_spawner.py  paint_test.py  wall_detection.py
controller/: admittance_controller.cpp  readme
insp-main/ur5e_dual_arm/: package.xml
insp-main/ur5e_dual_arm/config/: ros2_controllers.yaml
insp-main/ur5e_dual_arm/launch/: gz.launch.py
insp-main/ur5e_dual_arm/urdf/: ur5e_dual_arm.urdf.xacro
insp-main/ur5e_dual_arm/worlds/: empty_world.world
insp-main/ur5e_dual_arm1_moveit_config/config/: joint_limits.yaml  moveit_controllers.yaml  ur5e_dual_arm.srdf
insp-main/ur5e_dual_arm1_moveit_config/launch/: demo.launch.py  move_group.launch.py
insp-main/ur5e_dual_arm_moveit_config/: CMakeLists.txt
insp-main/ur5e_dual_arm_moveit_config/config/: kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  pilz_cartesian_limits.yaml
insp-main/ur5e_dual_arm_moveit_config/launch/: demo.launch.py  move_group.launch.py
insp-main/ur5e_dual_arm_moveit_config/rviz/: moveit.rviz
insp-main/ur5e_single_arm_moveit_config/: package.xml
insp-main/ur5e_single_arm_moveit_config/config/: joint_limits.yaml  ur5e.srdf
insp-main/ur5e_single_arm_moveit_config/launch/: demo.launch.py
multi-main/ur5e_dual_arm/: CMakeLists.txt
multi-main/ur5e_dual_arm/config/: camera_bridge.yaml  ros2_controllers.yaml
multi-main/ur5e_dual_arm/launch/: gz.launch.py
multi-main/ur5e_dual_arm/scripts/: object_detection.py  object_detection1.py  task_planner.py  task_planner1.py
multi-main/ur5e_dual_arm/urdf/: intel_rgbd_cam_d435.urdf.xacro  ur5e_dual_arm.urdf.xacro  ur5e_dual_arm2.urdf.xacro
multi-main/ur5e_dual_arm/worlds/: empty_world.world
multi-main/ur5e_dual_arm_moveit_config/: package.xml
multi-main/ur5e_dual_arm_moveit_config/config/: joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  sensors_3d.yaml
multi-main/ur5e_dual_arm_moveit_config/launch/: demo.launch.py  move_group.launch.py  static_virtual_joint_tfs.launch.py
multi-main/ur5e_dual_arm_moveit_config/rviz/: moveit.rviz
multo_robot_collaborative-main/: README.md
multo_robot_collaborative-main/ur5e_dual_arm/: CMakeLists.txt  package.xml
multo_robot_collaborative-main/ur5e_dual_arm/config/: ros2_controllers.yaml
multo_robot_collaborative-main/ur5e_dual_arm/launch/: display.launch.py  gazebo.launch.py  gz.launch.py
multo_robot_collaborative-main/ur5e_dual_arm/urdf/: ur5e_dual_arm.urdf.xacro
multo_robot_collaborative-main/ur5e_dual_arm_moveit_config/: CMakeLists.txt  package.xml
multo_robot_collaborative-main/ur5e_dual_arm_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  pilz_cartesian_limits.yaml  ur5e_dual_arm.srdf
multo_robot_collaborative-main/ur5e_single_arm_moveit_config/: CMakeLists.txt  package.xml
multo_robot_collaborative-main/ur5e_single_arm_moveit_config/config/: moveit_controllers.yaml  ompl_planning.yaml  pilz_cartesian_limits.yaml
multo_robot_collaborative-main/ur5e_single_arm_moveit_config/launch/: moveit.launch.py
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build
ros2_ws/src/ur_description/: CMakeLists.txt
(+294 files in other folders)
