<?xml version="1.0"?>
<package format="3">
  <name>dual_ur5e_moveit_config</name>
  <version>0.0.0</version>
  <description>Dual UR5e MoveIt configuration</description>
  <maintainer email="you@email.com">You</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

</package>