cmake_minimum_required(VERSION 3.8)
project(wall_painter)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclpy REQUIRED)
find_package(moveit_ros_planning_interface REQUIRED)
find_package(geometry_msgs REQUIRED)

install(PROGRAMS
  # scripts/paint_test.py
  # scripts/generate_waypoints.py
  scripts/wall_detection.py
  scripts/object_spawner.py
  scripts/full_wall_detection.py
  DESTINATION lib/${PROJECT_NAME}
)

ament_package()
